--- a/src/sample/language_fr_FR.properties
+++ b/src/sample/language_fr_FR.properties
@@ -1,1 +1,8 @@
 hello = bonjour
+Welcome = Bienvenue
+Username = Nom d'utilisateur
+Password = Mot de Passe
+Type = Tapez
+Your = Votre
+Login = Se Connecter
+Exit = Sortie
