--- a/src/sample/language_en_US.properties
+++ b/src/sample/language_en_US.properties
@@ -1,8 +1,7 @@
-hello = hello
-Welcome = Welcome
-Username = Username
-Password = Password
-Type = Type
-Your = Your
-Login = Login
-Exit = Exit
+welcome = WELCOME!
+usernameLabel = USERNAME
+passwordLabel = PASSWORD
+usernamePrompt = TYPE YOUR USERNAME
+passwordPrompt = TYPE YOUR PASSWORD
+login = LOGIN
+exit = EXIT
