--- a/src/sample/language_fr_FR.properties
+++ b/src/sample/language_fr_FR.properties
@@ -1,8 +1,7 @@
-hello = bonjour
-Welcome = Bienvenue
-Username = Nom d'utilisateur
-Password = Mot de Passe
-Type = Tapez
-Your = Votre
-Login = Se Connecter
-Exit = Sortie
+welcome = BIENVENUE!
+usernameLabel = NOM D'UTILISATEUR
+passwordLabel = MOT DE PASSE
+usernamePrompt = TAPEZ VOTRE NOM D'UTILISATEUR
+passwordPrompt = TAPEZ VOTRE MOT DE PASSE
+login = SE CONNECTER
+exit = SORTIE
