--- a/src/sample/language_en_US.properties
+++ b/src/sample/language_en_US.properties
@@ -5,3 +5,5 @@ usernamePrompt = TYPE YOUR USERNAME
 passwordPrompt = TYPE YOUR PASSWORD
 login = LOGIN
 exit = EXIT
+error = Error
+errorMessage = Username or Password not found
