--- a/src/sample/language_fr_FR.properties
+++ b/src/sample/language_fr_FR.properties
@@ -5,3 +5,5 @@ usernamePrompt = TAPEZ VOTRE NOM D'UTILISATEUR
 passwordPrompt = TAPEZ VOTRE MOT DE PASSE
 login = SE CONNECTER
 exit = SORTIE
+error = erreur
+errorMessage = Nom d'utilisateur ou mot de passe introuvable
