--- a/src/sample/language_en_US.properties
+++ b/src/sample/language_en_US.properties
@@ -7,3 +7,5 @@ login = LOGIN
 exit = EXIT
 error = Error
 errorMessage = Username or Password not found
+exitHeader = Exit Application
+exitMessage = Do you want to close the application?
