--- a/src/sample/language_fr_FR.properties
+++ b/src/sample/language_fr_FR.properties
@@ -7,3 +7,5 @@ login = SE CONNECTER
 exit = SORTIE
 error = erreur
 errorMessage = Nom d'utilisateur ou mot de passe introuvable
+exitHeader = quitter l'application
+exitMessage = Voulez-vous fermer l'application?
